# mattengine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/models/dog/: mesh.fbx
assets/scripts/: move.py
assets/shaders/: bloom.glsl  blur.glsl  brightnessFilter.glsl  core.glsl  grayscale.glsl  hdr.glsl  invert.glsl  rawTriangle.glsl  shadow.glsl  skybox.glsl  texture.glsl
src/demo/: main.cpp
src/demo_physics/: main.cpp
src/editor/: EditorGame.cpp  EditorGame.h  EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  SceneExporter.cpp  SceneExporter.h  SceneLoader.cpp  SceneLoader.h  main.cpp
src/editor/imgui/: ImGuiComponentEditor.cpp  ImGuiComponentEditor.h  ImGuiEngineSettings.cpp  ImGuiEngineSettings.h  ImGuiEntityList.cpp  ImGuiEntityList.h  ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  ImGuiMenuBar.cpp  ImGuiMenuBar.h  ImGuiPerspectiveCamera.cpp  ImGuiPerspectiveCamera.h  ImGuiQuatEditor.cpp  ImGuiQuatEditor.h  ImGuiViewport.cpp  ImGuiViewport.h
src/engine/: Camera.h  CubeMap.cpp  Entity.h  FPSPlayerController.cpp  FPSPlayerController.h  Framebuffer.cpp  Framebuffer.h  Game.cpp  Game.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  Light.h  Log.h  Model.cpp  MouseRotationCameraController.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  VertexArray.cpp  VertexArray.h  Vertices.h  Window.cpp  Window.h
src/engine/components/: ColliderComponent.h  ColourComponent.h  DeleteComponent.h  LightComponent.h  OrthoCameraComponent.h  PhysicsComponent.h  RigidBodyComponent.h  ScriptComponent.h  TagComponent.h  TextComponent.h  TextureComponent.h  TransformComponent.h
src/engine/core/: Dialogs.cpp  Dialogs.h  FPSPlayerController.cpp  FPSPlayerController.h  Game.cpp  Game.h  ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  Log.h  Physics.cpp  PlayerController.h  PostProcessingLayer.cpp  PostProcessingLayer.h  Scene.cpp  Scene.h  SceneExporter.cpp  SceneExporter.h  ShadowLayer.cpp  ShadowLayer.h  Timer.cpp  Window.cpp  Window.h
src/engine/entity/components/: AnimationComponent.h  ColourComponent.h  DeleteComponent.h  ModelComponent.h  PerspectiveCameraComponent.h  PlayerControllerComponent.h  PointLightComponent.h  PythonScriptComponent.h  ScriptComponent.h  SkyBoxComponent.h  TagComponent.h  TextureComponent.h  TransformComponent.h
src/engine/python/: EnginePythonModule.h  EntityPythonType.h  PythonScript.cpp  PythonScript.h
src/engine/renderer/: Animator.cpp  Animator.h  CubeMap.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelStore.cpp  ModelStore.h  PointLight.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureStore.cpp  TextureStore.h  VertexArray.cpp  VertexArray.h  Vertices.h
src/engine/renderer/camera/: Camera.h  FlyCameraController.cpp  FlyCameraController.h  MouseRotationCameraController.cpp  MouseRotationCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h
